feat: Introduce Mel feature extraction and a new notebook for a hybrid EVA-02 and Transformer model for audio classification.

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -416,6 +416,111 @@
     "# ================= RUN =================\n",
     "extract_features()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d175b98c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🎧 Found 16585 audio files\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Extracting Mel: 100%|#####################| 16585/16585 [04:17<00:00, 64.48it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✅ Mel feature extraction complete!\n",
+      "📂 Saved to: A:\\Conferences\\VOICE\\features\\mel\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ================= MEL FEATURE EXTRACTION =================\n",
+    "import os\n",
+    "import librosa\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "from tqdm.std import tqdm\n",
+    "\n",
+    "# -------- CONFIG --------\n",
+    "DATASET_DIR = Path(\"dataset_split\")   # same as before\n",
+    "OUTPUT_DIR  = Path(\"features/mel\")\n",
+    "\n",
+    "TARGET_SR = 16000\n",
+    "N_MELS = 80\n",
+    "HOP_LENGTH = 320     # ~20 ms hop (matches speech models well)\n",
+    "WIN_LENGTH = 1024\n",
+    "\n",
+    "# -------- CREATE FOLDER STRUCTURE --------\n",
+    "for split in [\"train\", \"val\", \"test\"]:\n",
+    "    for cls_dir in (DATASET_DIR / split).iterdir():\n",
+    "        if cls_dir.is_dir():\n",
+    "            (OUTPUT_DIR / split / cls_dir.name).mkdir(\n",
+    "                parents=True, exist_ok=True\n",
+    "            )\n",
+    "\n",
+    "# -------- COLLECT AUDIO FILES --------\n",
+    "audio_files = (\n",
+    "    list(DATASET_DIR.rglob(\"*.wav\")) +\n",
+    "    list(DATASET_DIR.rglob(\"*.flac\"))\n",
+    ")\n",
+    "\n",
+    "print(f\"🎧 Found {len(audio_files)} audio files\")\n",
+    "\n",
+    "# -------- EXTRACTION LOOP --------\n",
+    "for file_path in tqdm(audio_files, desc=\"Extracting Mel\", ascii=True, ncols=80):\n",
+    "    try:\n",
+    "        # Load audio\n",
+    "        y, sr = librosa.load(file_path, sr=TARGET_SR)\n",
+    "\n",
+    "        # Mel-spectrogram\n",
+    "        mel = librosa.feature.melspectrogram(\n",
+    "            y=y,\n",
+    "            sr=TARGET_SR,\n",
+    "            n_mels=N_MELS,\n",
+    "            hop_length=HOP_LENGTH,\n",
+    "            win_length=WIN_LENGTH,\n",
+    "            power=2.0\n",
+    "        )\n",
+    "\n",
+    "        # Convert to log-mel (dB)\n",
+    "        mel_db = librosa.power_to_db(mel, ref=np.max)\n",
+    "\n",
+    "        # Transpose → (T, 80)\n",
+    "        mel_db = mel_db.T.astype(np.float32)\n",
+    "\n",
+    "        # Save path\n",
+    "        rel_path = file_path.relative_to(DATASET_DIR)\n",
+    "        save_path = OUTPUT_DIR / rel_path.with_suffix(\".npy\")\n",
+    "\n",
+    "        np.save(save_path, mel_db)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error processing {file_path.name}: {e}\")\n",
+    "\n",
+    "print(\"\\n✅ Mel feature extraction complete!\")\n",
+    "print(f\"📂 Saved to: {OUTPUT_DIR.resolve()}\")\n"
+   ]
   }
  ],
  "metadata": {
